refactor: optimize RestTemplate initialization in SupabaseAuthService